intern/cycles/render/object.cpp
@@ -512,7 +512,9 @@ void ObjectManager::apply_static_transforms(DeviceScene *dscene, Scene *scene, u
 
 	/* apply transforms for objects with single user meshes */
 	foreach(Object *object, scene->objects) {
-		if(mesh_users[object->mesh] == 1) {
+		if(mesh_users[object->mesh] == 1 &&
+		   object->mesh->displacement_method == Mesh::DISPLACE_BUMP)
+		{
 			if(!(motion_blur && object->use_motion)) {
 				if(!object->mesh->transform_applied) {
 					object->apply_transform(apply_to_motion);
